вроде крутенско работает. mfcc